--- a/cemu-launcher.csproj
+++ b/cemu-launcher.csproj
@@ -10,6 +10,7 @@
     <Platforms>ARM64;x64</Platforms>
     <OutputPath>$(SolutionDir)/bin/$(Configuration)/$(Platform)/</OutputPath>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+    <Version>0.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
