Add update prompt

--- a/cemu-launcher.csproj
+++ b/cemu-launcher.csproj
@@ -11,6 +11,7 @@
     <OutputPath>$(SolutionDir)/bin/$(Configuration)/$(Platform)/</OutputPath>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <Version>0.1.0</Version>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
 
   <ItemGroup>
